k8s-conf/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongo
  template:
    metadata:
      labels:
        service: mongo
    spec:
      containers:
      - name: mongo
        image: omarabdul3ziz/mongodb:1.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: mongo-volume-mount
            mountPath: /var/lib/mongo/data
      volumes:
      - name: mongo-volume-mount
        persistentVolumeClaim:
          claimName: mongo-pvc
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    service: mongo
spec:
  selector:
    service: mongo
  type: ClusterIP
  ports:
  - port: 27017
