k8s-conf/vue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue
  labels:
    name: vue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue
  template:
    metadata:
      labels:
        app: vue
    spec:
      containers:
      - name: vue
        image: vue:local
        imagePullPolicy: Never
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: vue
  labels:
    service: vue
spec:
  selector:
    app: vue
  ports:
  - port: 8080
    targetPort: 8080
